Refactoring the toString methods in the player and dealer's hand class.